--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
 build
 dist
 *.egg-info
+
+# swap
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+# session
+Session.vim
+# temporary
+.netrwhist
+*~
+# auto-generated tag files
+tags
